@@ -1,10 +1,16 @@
-CHANGES.txt - 2009-07-14
+CHANGES.txt - 2009-08-07
 ------------------------
 
 CHANGES IN CUPS V1.4.0
 
 	- Localization updates (STR #3223, STR #3246, STR #3248, STR #3250)
 	- Documentation updates (STR #3225, STR #3230, STR #3242, STR #3260)
+	- The --with-pdftops configure option did not accept a full path to the
+	  filter (STR #3278)
+	- The banner filter did not position the back side image correctly
+	  (STR #3277)
+	- The dnssd backend could crash (STR #3272)
+	- The 1284 device ID sometimes contained trailing garbage (STR #3266)
 	- The USB backend returned different URIs for some printers than in
 	  CUPS 1.3 (STR #3259)
 	- The scheduler did not do local job-hold-until processing for remote
